--- a/css/styles.css
+++ b/css/styles.css
@@ -129,3 +129,17 @@ body{
 #search-form input::placeholder{
     color: #FFF;
 }
+
+/* Bottom Navbar */
+#bottom-navbar-container .container{
+    justify-content: end;
+}
+
+#bottom-navbar-container a{
+    font-weight: 600;
+    color: #FFF;
+}
+
+.navbar-toggler{
+    font-size: 1.5em;
+}
