--- a/css/styles.css
+++ b/css/styles.css
@@ -292,3 +292,34 @@ body{
     background-color: #C09578;
     border-color: #C09578;
 }
+
+/* Best Seller */
+
+#bottom-banner{
+    background-color: #101010;
+    padding: 6em;
+    margin-bottom: 4em;
+    text-align: center;
+}
+
+#bottom-banner .offer-subtitle,
+#bottom-bannr h2{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#bottom-banner .btn{
+    margin: 2em;
+    font-weight: bold;
+    padding: 1em;
+}
+
+#bottom-banner img{
+    max-width: 175px;
+}
+
+@media(min-width: 768px){
+    #bottom-banner h2{
+        font-size: 6em;
+    }
+}
